...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditFragment">


    <Button
        android:id="@+id/btnEdit"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginBottom="20dp"
        android:text="@string/edit_button"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
...
        app:counterEnabled="true"
        app:counterMaxLength="50"
        app:errorEnabled="true"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editName"
            android:layout_width="252dp"
            android:layout_height="56dp"
            android:hint="@string/toDoLabel" />


    </com.google.android.material.textfield.TextInputLayout>
...
        app:layout_constraintHorizontal_bias="0.462"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutToDo"
        app:startIconDrawable="@drawable/ic_baseline_calendar_today_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editDate"
            android:layout_width="234dp"
            android:layout_height="56dp"
            android:hint="@string/dateLabel" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutDate"
        app:startIconContentDescription="@string/dateLabel"
        app:startIconDrawable="@drawable/ic_baseline_access_time_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTime"
            android:layout_width="234dp"
            android:layout_height="56dp"
            android:hint="@string/timeLabel" />

    </com.google.android.material.textfield.TextInputLayout>

...
            app:singleSelection="true">

        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>

    <ImageButton
        android:id="@+id/deleteEditButton"
        android:layout_width="55dp"
        android:layout_height="43dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="#00FFFFFF"
        android:src="@drawable/ic_baseline_delete_40"
...
        app:layout_constraintHorizontal_bias="0.471"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView2"
        app:startIconContentDescription="@string/newCategoryLabel">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editCategory"
            android:layout_width="234dp"
            android:layout_height="55dp"
            android:hint="@string/categoryLabel" />
    </com.google.android.material.textfield.TextInputLayout>


...
