<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home_nav"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/allCards"/>
    <item
        android:id="@+id/category_nav"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_category_24"
        android:title="@string/categoriesLabel"/>
    <item
        android:id="@+id/settings_nav"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_settings_35"
        android:title="@string/settingLabel" />


</menu>